# ing-cc

./: .gitignore  Justfile  LICENSE  README.md  agents.md  pyproject.toml
src/ing_cc/: __init__.py  parser.py
tests/: test_parser.py
