[project]
name = "ing-cc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tinco Andringa", email = "mail@tinco.nl" }
]
requires-python = ">=3.13"
dependencies = [
    "pypdf",
]

[project.scripts]
ing-cc = "ing_cc:main"
ing-cc-analysis = "ing_cc.analysis:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
